[package]
name = "pagemap"
version = "0.1.0" # remember to update html_root_url
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
license = "Apache-2.0"
description = "A crate to provide a simple API to Linux kernel's pagemap API."
repository = "https://github.com/ckatsak/pagemap-rs"
readme = "README.md"
edition = "2018"
keywords = ["linux"]
categories = ["os", "os::linux-apis", "memory-management"]

[dependencies]
bitflags = "1.2"
libc = "0.2"
thiserror = "1.0"
